--- a/subphenotype/pipeline.ipynb
+++ b/subphenotype/pipeline.ipynb
@@ -12,246 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "ad7f9ba5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>District</th>\n",
-       "      <th>State/UT</th>\n",
-       "      <th>Population Age 15+ (%)</th>\n",
-       "      <th>Population Age 45+ (%)</th>\n",
-       "      <th>Women Overweight or Obese (%) [BMI&gt;=25.0]</th>\n",
-       "      <th>Men Overweight or Obese (%) [BMI&gt;=25.0]</th>\n",
-       "      <th>Women Underweight (%) [BMI&lt;18.5]</th>\n",
-       "      <th>Men Underweight (%) [BMI&lt;18.5]</th>\n",
-       "      <th>Women Hypertensive (%) [SBP&gt;=140 mmHg OR DBP&gt;=90mmHg]</th>\n",
-       "      <th>Men Hypertensive (%) [SBP&gt;=140 mmHg OR DBP&gt;=90mmHg]</th>\n",
-       "      <th>Women High Glucose [BG&gt;140mg/dl OR medicated]</th>\n",
-       "      <th>Men High Glucose [BG&gt;140mg/dl OR medicated]</th>\n",
-       "      <th>Women Substantially Increased Risk of Metabolic Complications (%) [waist&gt;88cm]</th>\n",
-       "      <th>Men Substantially Increased Risk of Metabolic Complications (%) [waist&gt;102cm]</th>\n",
-       "      <th>TB Prevalence (%)</th>\n",
-       "      <th>Population in Highest Wealth Quintile (%)</th>\n",
-       "      <th>Households with Health Insurance / Financing Scheme Coverage (%)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Nicobars</td>\n",
-       "      <td>Andaman &amp; Nicobar Islands</td>\n",
-       "      <td>75.28</td>\n",
-       "      <td>19.42</td>\n",
-       "      <td>38.1</td>\n",
-       "      <td>45.3</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>35.4</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.221</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>North &amp; Middle Andaman</td>\n",
-       "      <td>Andaman &amp; Nicobar Islands</td>\n",
-       "      <td>78.29</td>\n",
-       "      <td>22.37</td>\n",
-       "      <td>38.1</td>\n",
-       "      <td>45.3</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>27.4</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.221</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Andaman &amp; Nicobar Islands</td>\n",
-       "      <td>82.88</td>\n",
-       "      <td>27.18</td>\n",
-       "      <td>38.1</td>\n",
-       "      <td>45.3</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>26.9</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.221</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Srikakulam</td>\n",
-       "      <td>Andhra Pradesh</td>\n",
-       "      <td>78.28</td>\n",
-       "      <td>29.98</td>\n",
-       "      <td>36.3</td>\n",
-       "      <td>31.1</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>22.1</td>\n",
-       "      <td>22.9</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>21.8</td>\n",
-       "      <td>28.4</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>0.239</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>75.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vizianagaram</td>\n",
-       "      <td>Andhra Pradesh</td>\n",
-       "      <td>77.29</td>\n",
-       "      <td>29.83</td>\n",
-       "      <td>36.3</td>\n",
-       "      <td>31.1</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>25.2</td>\n",
-       "      <td>25.1</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>21.8</td>\n",
-       "      <td>28.4</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>0.239</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>76.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  District                   State/UT  Population Age 15+ (%)  \\\n",
-       "0                 Nicobars  Andaman & Nicobar Islands                   75.28   \n",
-       "1  North & Middle Andaman   Andaman & Nicobar Islands                   78.29   \n",
-       "2           South Andaman   Andaman & Nicobar Islands                   82.88   \n",
-       "3              Srikakulam              Andhra Pradesh                   78.28   \n",
-       "4            Vizianagaram              Andhra Pradesh                   77.29   \n",
-       "\n",
-       "   Population Age 45+ (%)  Women Overweight or Obese (%) [BMI>=25.0]  \\\n",
-       "0                   19.42                                       38.1   \n",
-       "1                   22.37                                       38.1   \n",
-       "2                   27.18                                       38.1   \n",
-       "3                   29.98                                       36.3   \n",
-       "4                   29.83                                       36.3   \n",
-       "\n",
-       "   Men Overweight or Obese (%) [BMI>=25.0]  Women Underweight (%) [BMI<18.5]  \\\n",
-       "0                                     45.3                               9.4   \n",
-       "1                                     45.3                               9.4   \n",
-       "2                                     45.3                               9.4   \n",
-       "3                                     31.1                              14.8   \n",
-       "4                                     31.1                              14.8   \n",
-       "\n",
-       "   Men Underweight (%) [BMI<18.5]  \\\n",
-       "0                             4.0   \n",
-       "1                             4.0   \n",
-       "2                             4.0   \n",
-       "3                            16.5   \n",
-       "4                            16.5   \n",
-       "\n",
-       "   Women Hypertensive (%) [SBP>=140 mmHg OR DBP>=90mmHg]  \\\n",
-       "0                                               35.4       \n",
-       "1                                               27.4       \n",
-       "2                                               23.0       \n",
-       "3                                               22.1       \n",
-       "4                                               25.2       \n",
-       "\n",
-       "   Men Hypertensive (%) [SBP>=140 mmHg OR DBP>=90mmHg]  \\\n",
-       "0                                               47.0     \n",
-       "1                                               32.2     \n",
-       "2                                               26.9     \n",
-       "3                                               22.9     \n",
-       "4                                               25.1     \n",
-       "\n",
-       "   Women High Glucose [BG>140mg/dl OR medicated]  \\\n",
-       "0                                           17.5   \n",
-       "1                                           17.5   \n",
-       "2                                           17.5   \n",
-       "3                                           19.5   \n",
-       "4                                           19.5   \n",
-       "\n",
-       "   Men High Glucose [BG>140mg/dl OR medicated]  \\\n",
-       "0                                         17.9   \n",
-       "1                                         17.9   \n",
-       "2                                         17.9   \n",
-       "3                                         21.8   \n",
-       "4                                         21.8   \n",
-       "\n",
-       "   Women Substantially Increased Risk of Metabolic Complications (%) [waist>88cm]  \\\n",
-       "0                                               30.7                                \n",
-       "1                                               30.7                                \n",
-       "2                                               30.7                                \n",
-       "3                                               28.4                                \n",
-       "4                                               28.4                                \n",
-       "\n",
-       "   Men Substantially Increased Risk of Metabolic Complications (%) [waist>102cm]  \\\n",
-       "0                                                6.4                               \n",
-       "1                                                6.4                               \n",
-       "2                                                6.4                               \n",
-       "3                                                5.7                               \n",
-       "4                                                5.7                               \n",
-       "\n",
-       "   TB Prevalence (%)  Population in Highest Wealth Quintile (%)  \\\n",
-       "0              0.221                                       18.0   \n",
-       "1              0.221                                       18.0   \n",
-       "2              0.221                                       18.0   \n",
-       "3              0.239                                       15.6   \n",
-       "4              0.239                                       15.6   \n",
-       "\n",
-       "   Households with Health Insurance / Financing Scheme Coverage (%)  \n",
-       "0                                                2.7                 \n",
-       "1                                                2.1                 \n",
-       "2                                                1.2                 \n",
-       "3                                               75.6                 \n",
-       "4                                               76.7                 "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -277,10 +41,7 @@
     "    \"WAIST_M\": \"Men Substantially Increased Risk of Metabolic Complications (%) [waist>102cm]\",\n",
     "}\n",
     "\n",
-    "ID_COLS = [\"District\", \"State/UT\"]\n",
-    "\n",
-    "# notebook preview\n",
-    "df_clean.head()"
+    "ID_COLS = [\"District\", \"State/UT\"]"
    ]
   },
   {
@@ -293,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "7b84c371",
    "metadata": {},
    "outputs": [
@@ -323,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "dae91b48",
    "metadata": {},
    "outputs": [],
@@ -368,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "d0545b1b",
    "metadata": {},
    "outputs": [],
@@ -389,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "d1055069",
    "metadata": {},
    "outputs": [],
@@ -423,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "15ae39b0",
    "metadata": {},
    "outputs": [],
@@ -463,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "169ac7f0",
    "metadata": {},
    "outputs": [],
@@ -484,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "46b4b69c",
    "metadata": {},
    "outputs": [],
@@ -506,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "1ed67223",
    "metadata": {},
    "outputs": [],
@@ -546,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "4b540d33",
    "metadata": {},
    "outputs": [],
