feat: integrate genetic risk scores into heatmap

--- a/visualization/heatmap.ipynb
+++ b/visualization/heatmap.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "id": "2b2f7755",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,15 @@
     "import os\n",
     "\n",
     "# paths\n",
-    "IN_PATH      = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"out\", \"subphenotypes.csv\"))\n",
-    "GEOJSON_PATH = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"data\", \"assets\", \"districts.geojson\"))\n",
+    "SUBPHENOTYPES_DATA_PATH = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"out\", \"subphenotypes.csv\"))\n",
+    "GENETICS_DATA_PATH      = os.path.abspath(os.path.join(\"..\", \"genetic\", \"data\", \"state_scores.csv\"))\n",
+    "GEOJSON_PATH            = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"data\", \"assets\", \"districts.geojson\"))\n",
     "\n",
     "# column names\n",
-    "SCORE_COL    = \"GLP1_Focused_Priority_Score\"\n",
-    "DISTRICT_CSV = \"District\"\n",
-    "STATE_CSV    = \"State/UT\"\n",
+    "PRIORITY_SCORE_COL = \"GLP1_Focused_Priority_Score\"\n",
+    "GENETIC_RISK_COL   = \"Weighted_Priority_Score\"\n",
+    "DISTRICT_COL       = \"District\"\n",
+    "STATE_COL          = \"State/UT\"\n",
     "\n",
     "# geojson field names\n",
     "DISTRICT_GJ  = \"district\"\n",
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "id": "2cfb6d80",
    "metadata": {},
    "outputs": [],
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "id": "454da5b8",
    "metadata": {},
    "outputs": [],
@@ -83,14 +85,38 @@
     "    return str(s).strip().lower()\n",
     "\n",
     "\n",
-    "df = pd.read_csv(IN_PATH)\n",
+    "df_subphenotype = pd.read_csv(SUBPHENOTYPES_DATA_PATH)\n",
     "\n",
     "# build normalized matching keys\n",
-    "df[\"district_key\"] = df[DISTRICT_CSV].map(norm).map(lambda x: ALIASES.get(x, x))\n",
-    "df[\"state_key\"]    = df[STATE_CSV].map(norm)\n",
+    "df_subphenotype[\"district_key\"] = df_subphenotype[DISTRICT_COL].map(norm).map(lambda x: ALIASES.get(x, x))\n",
+    "df_subphenotype[\"state_key\"]    = df_subphenotype[STATE_COL].map(norm)\n",
     "\n",
     "# build a lookup from (district_key, state_key) -> score\n",
-    "csv_lookup = { (r[\"district_key\"], r[\"state_key\"]): r[SCORE_COL] for _, r in df.dropna(subset=[SCORE_COL]).iterrows() }"
+    "subphenotype_lookup = { (r[\"district_key\"], r[\"state_key\"]): r[PRIORITY_SCORE_COL] for _, r in df_subphenotype.dropna(subset=[PRIORITY_SCORE_COL]).iterrows() }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d65172c8",
+   "metadata": {},
+   "source": [
+    "Construct genetic data lookup:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7f4dda7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_genetic = pd.read_csv(GENETICS_DATA_PATH)\n",
+    "\n",
+    "# build normalized matching keys\n",
+    "df_genetic[\"state_key\"] = df_genetic[STATE_COL].map(norm)\n",
+    "\n",
+    "# build a lookup from (district_key, state_key) -> score\n",
+    "gneetic_lookup = { r[\"state_key\"]: r[GENETIC_RISK_COL] for _, r in df_genetic.dropna(subset=[GENETIC_RISK_COL]).iterrows() }"
    ]
   },
   {
@@ -98,12 +124,12 @@
    "id": "6d3c3ed8",
    "metadata": {},
    "source": [
-    "Match priority scores from CSV, and add to GeoJSON features:"
+    "Match subphenotype-based priority and genetic risk scores from CSV, and add to GeoJSON features:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "id": "aafdd555",
    "metadata": {},
    "outputs": [],
@@ -120,10 +146,13 @@
     "    d = norm(props.get(DISTRICT_GJ, \"\"))\n",
     "    s = norm(props.get(STATE_GJ, \"\"))\n",
     "\n",
-    "    # match score\n",
-    "    score = csv_lookup.get((d, s))\n",
+    "    # match score and risk\n",
+    "    score = subphenotype_lookup.get((d, s))\n",
+    "    risk  = gneetic_lookup.get(s)\n",
     "    \n",
-    "    props[\"glp1_score\"] = float(score) if score else None\n",
+    "    props[\"glp1_score\"]   = float(score) if score else None\n",
+    "    props[\"genetic_risk\"] = float(risk) if risk else None\n",
+    "    \n",
     "    feat[\"properties\"] = props"
    ]
   },
@@ -137,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "id": "660811ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.LayerControl at 0x7ff01e1dc160>"
+       "<folium.map.LayerControl at 0x7ff8660202b0>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,24 +187,45 @@
     "from branca.colormap import linear\n",
     "import numpy as np\n",
     "\n",
-    "values     = df[SCORE_COL].dropna()\n",
+    "values     = df_subphenotype[PRIORITY_SCORE_COL].dropna()\n",
     "VMIN, VMAX = float(values.min()), float(values.max())\n",
     "\n",
-    "# color map palette\n",
-    "cmap         = linear.YlOrRd_09.scale(VMIN, VMAX)\n",
-    "cmap.caption = \"GLP1-Focused Priority Score\"\n",
+    "risk_values     = df_genetic[GENETIC_RISK_COL].dropna()\n",
+    "RISK_MIN, RISK_MAX = float(risk_values.min()), float(risk_values.max())\n",
+    "\n",
+    "# color map palette for GLP1 priority scoring\n",
+    "priority_cmap         = linear.YlOrRd_09.scale(VMIN, VMAX)\n",
+    "priority_cmap.caption = \"GLP1-Focused Priority Score\"\n",
+    "\n",
+    "# color map palette for genetic risk scoring\n",
+    "risk_cmap         = linear.YlOrRd_09.scale(RISK_MIN, RISK_MAX)\n",
+    "risk_cmap.caption = \"Genetic Risk Score\"\n",
     "\n",
     "\n",
-    "def style_fn(feature):\n",
+    "def style_priority(feature):\n",
     "    val = feature[\"properties\"].get(\"glp1_score\")\n",
     "    \n",
     "    if val is None or (isinstance(val, float) and np.isnan(val)):\n",
-    "        return { \"fillOpacity\": 0.2, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\" }\n",
+    "        return { \"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\" }\n",
     "    \n",
     "    return {\n",
-    "        \"fillOpacity\": 0.8,\n",
-    "        \"weight\":      0.3,\n",
-    "        \"fillColor\":   cmap(float(val)),\n",
+    "        \"fillOpacity\": 0.6,\n",
+    "        \"weight\":      0.25,\n",
+    "        \"fillColor\":   priority_cmap(float(val)),\n",
+    "        \"color\":       \"#333333\",\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def style_risk(feature):\n",
+    "    val = feature[\"properties\"].get(\"genetic_risk\")\n",
+    "    \n",
+    "    if val is None or (isinstance(val, float) and np.isnan(val)):\n",
+    "        return { \"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\" }\n",
+    "    \n",
+    "    return {\n",
+    "        \"fillOpacity\": 0.35,\n",
+    "        \"weight\":      0.45,\n",
+    "        \"fillColor\":   risk_cmap(float(val)),\n",
     "        \"color\":       \"#333333\",\n",
     "    }\n",
     "\n",
@@ -186,7 +236,7 @@
     "folium.GeoJson(\n",
     "    data          =geo,\n",
     "    name          =\"GLP1 Priority by District\",\n",
-    "    style_function=style_fn,\n",
+    "    style_function=style_priority,\n",
     "    \n",
     "    tooltip=GeoJsonTooltip(\n",
     "        fields =[DISTRICT_GJ, STATE_GJ, \"glp1_score\"],\n",
@@ -196,10 +246,25 @@
     "    ),\n",
     ").add_to(m)\n",
     "\n",
-    "# add the legend\n",
-    "cmap.add_to(m)\n",
+    "folium.GeoJson(\n",
+    "    data          =geo,\n",
+    "    name          =\"Genetic Risk by State\",\n",
+    "    style_function=style_risk,\n",
+    "    \n",
+    "    tooltip=GeoJsonTooltip(\n",
+    "        fields =[DISTRICT_GJ, STATE_GJ, \"genetic_risk\"],\n",
+    "        aliases=[\"District\", \"State/UT\", \"Genetic Risk\"],\n",
+    "        sticky =True,\n",
+    "        labels =True,\n",
+    "    ),\n",
+    ").add_to(m)\n",
     "\n",
-    "folium.LayerControl().add_to(m)"
+    "# add the legends\n",
+    "priority_cmap.add_to(m)\n",
+    "risk_cmap.add_to(m)\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
+    "\n"
    ]
   },
   {
@@ -212,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "id": "be933400",
    "metadata": {},
    "outputs": [
@@ -220,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: /home/aarush/Projects/Novo_Nordisk/visualization/out/heatmap.html\n"
+      "Saved: /home/aarush/Projects/NN_Hackathon/visualization/out/heatmap.html\n"
      ]
     }
    ],
