feat(subphenotype): remove wealth data from priority scores

--- a/subphenotype/pipeline.ipynb
+++ b/subphenotype/pipeline.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "ad7f9ba5",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "7b84c371",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "dae91b48",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def zscore(series:pd.Series) -> pd.Series:\n",
+    "def z_norm(series:pd.Series) -> pd.Series:\n",
     "\t\"\"\"Mean-impute and z-score. If std==0 or NaN, return zeros.\"\"\"\n",
     "\t\n",
     "\ts  = series.copy()\n",
@@ -107,7 +107,7 @@
     "\n",
     "\n",
     "# compute per-district indicator z-scores\n",
-    "z = { k: zscore(df_clean[c]) for k, c in COLS.items() }\n",
+    "z = { k: z_norm(df_clean[c]) for k, c in COLS.items() }\n",
     "\n",
     "AGE45_z = z[\"AGE45\"]\n",
     "\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "d0545b1b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "d1055069",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "id": "15ae39b0",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "id": "169ac7f0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "46b4b69c",
    "metadata": {},
    "outputs": [],
@@ -253,8 +253,8 @@
     "audit = df_clean[ID_COLS].copy()\n",
     "\n",
     "audit[\"OVER_z\"], audit[\"WAIST_z\"], audit[\"HTN_z\"], audit[\"GLU_z\"], audit[\"UNDERWT_z\"], audit[\"AGE45_z\"] = OVER_z, WAIST_z, HTN_z, GLU_z, UNDER_z, AGE45_z\n",
-    "audit[\"IR_index\"], audit[\"DEF_index\"], audit[\"GLY_index\"], audit[\"AGE_index\"]                          = IR_index, DEF_index, GLY_index, AGE_index\n",
-    "audit[\"SIDD_raw\"], audit[\"SIRD_raw\"], audit[\"CIRDD_raw\"], audit[\"MOD_raw\"], audit[\"MARD_raw\"]          = SIDD_raw, SIRD_raw, CIRDD_raw, MOD_raw, MARD_raw"
+    "audit[\"IR_index\"], audit[\"DEF_index\"], audit[\"GLY_index\"], audit[\"AGE_index\"]                           = IR_index, DEF_index, GLY_index, AGE_index\n",
+    "audit[\"SIDD_raw\"], audit[\"SIRD_raw\"], audit[\"CIRDD_raw\"], audit[\"MOD_raw\"], audit[\"MARD_raw\"]           = SIDD_raw, SIRD_raw, CIRDD_raw, MOD_raw, MARD_raw"
    ]
   },
   {
@@ -267,34 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1ed67223",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def z_norm(series:pd.Series) -> pd.Series:\n",
-    "\t\"\"\"Z-score normalize a pandas Series, returns 0 if std == 0.\"\"\"\n",
-    "\t\n",
-    "\tmu    = series.mean(skipna=True)\n",
-    "\tsigma = series.std(skipna=True, ddof=0)\n",
-    "\t\n",
-    "\tif pd.isna(sigma) or sigma == 0: return pd.Series(np.zeros(len(series)), index=series.index)\n",
-    "\t\n",
-    "\treturn (series - mu) / sigma\n",
-    "\n",
-    "\n",
     "# choose proxies for inputs\n",
     "diabetes_norm  = z_norm(audit[\"GLY_index\"])\n",
-    "obesity_norm   =  z_norm(audit[\"OVER_z\"])\n",
-    "affluence_norm = z_norm(df_clean[\"Population in Highest Wealth Quintile (%)\"])\n",
+    "obesity_norm   = z_norm(audit[\"OVER_z\"])\n",
     "\n",
-    " # subtype shares (already percentages in main), normalize them\n",
+    "# subtype shares (already percentages in main), normalize them\n",
     "sird_norm = z_norm(main[\"SIRD_pct\"])\n",
     "mod_norm  = z_norm(main[\"MOD_pct\"])\n",
     "\n",
-    " # Compute scores\n",
-    "main[\"Priority_Score\"]              = (0.5*diabetes_norm + 0.3*obesity_norm + 0.2*affluence_norm) * 100\n",
-    "main[\"GLP1_Focused_Priority_Score\"] = (0.4*diabetes_norm + 0.3*obesity_norm + 0.2*affluence_norm + 0.05*sird_norm + 0.05*mod_norm) * 100"
+    "# compute scores\n",
+    "main[\"Priority_Score\"]              = (0.5*diabetes_norm + 0.3*obesity_norm) * 100\n",
+    "main[\"GLP1_Focused_Priority_Score\"] = (0.4*diabetes_norm + 0.3*obesity_norm + 0.05*sird_norm + 0.05*mod_norm) * 100"
    ]
   },
   {
@@ -307,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "id": "4b540d33",
    "metadata": {},
    "outputs": [],
