feat(visualization): add insurance, adoption layers to heatmap

--- a/visualization/heatmap.ipynb
+++ b/visualization/heatmap.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 77,
    "id": "2b2f7755",
    "metadata": {},
    "outputs": [],
@@ -20,22 +20,25 @@
     "import os\n",
     "\n",
     "# paths\n",
+    "NFHS_DATA_PATH          = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"data\", \"clean.csv\"))\n",
     "SUBPHENOTYPES_DATA_PATH = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"out\", \"subphenotypes.csv\"))\n",
     "GENETICS_DATA_PATH      = os.path.abspath(os.path.join(\"..\", \"genetic\", \"data\", \"state_scores.csv\"))\n",
     "GEOJSON_PATH            = os.path.abspath(os.path.join(\"..\", \"subphenotype\", \"data\", \"assets\", \"districts.geojson\"))\n",
     "\n",
     "# column names\n",
-    "PRIORITY_SCORE_COL = \"GLP1_Focused_Priority_Score\"\n",
-    "GENETIC_RISK_COL   = \"Weighted_Priority_Score\"\n",
-    "DISTRICT_COL       = \"District\"\n",
     "STATE_COL          = \"State/UT\"\n",
+    "DISTRICT_COL       = \"District\"\n",
+    "PRIORITY_SCORE_COL = \"GLP1_Focused_Priority_Score\"\n",
+    "GENETIC_RISK_COL   = \"Priority Score\"\n",
+    "AFFLUENCE_COL      = \"Population in Highest Wealth Quintile (%)\"\n",
+    "INSURANCE_COL      = \"Households with Health Insurance / Financing Scheme Coverage (%)\"\n",
     "\n",
     "# geojson field names\n",
     "DISTRICT_GJ  = \"district\"\n",
     "STATE_GJ     = \"st_nm\"\n",
     "\n",
     "# output path\n",
-    "HTML_PATH    = os.path.abspath(os.path.join(\".\", \"out\", \"map.html\"))"
+    "HTML_PATH = os.path.abspath(os.path.join(\".\", \"out\", \"map.html\"))"
    ]
   },
   {
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 78,
    "id": "2cfb6d80",
    "metadata": {},
    "outputs": [],
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "id": "454da5b8",
    "metadata": {},
    "outputs": [],
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "id": "7f4dda7a",
    "metadata": {},
    "outputs": [],
@@ -116,7 +119,55 @@
     "df_genetic[\"state_key\"] = df_genetic[STATE_COL].map(norm)\n",
     "\n",
     "# build a lookup from (district_key, state_key) -> score\n",
-    "gneetic_lookup = { r[\"state_key\"]: r[GENETIC_RISK_COL] for _, r in df_genetic.dropna(subset=[GENETIC_RISK_COL]).iterrows() }"
+    "genetic_lookup = { r[\"state_key\"]: r[GENETIC_RISK_COL] for _, r in df_genetic.dropna(subset=[GENETIC_RISK_COL]).iterrows() }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a37bce7",
+   "metadata": {},
+   "source": [
+    "Construct affluence/adoption data lookup:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ffd7fd74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def z_norm(series:pd.Series) -> pd.Series:\n",
+    "\t\"\"\"Mean-impute and z-score. If std==0 or NaN, return zeros.\"\"\"\n",
+    "\t\n",
+    "\ts  = series.copy()\n",
+    "\tmu = s.mean(skipna=True)\n",
+    "\ts  = s.fillna(mu)\n",
+    "\t\n",
+    "\tstd = s.std(skipna=True, ddof=0)\n",
+    "\t\n",
+    "\tif pd.isna(std) or std == 0: return pd.Series(np.zeros(len(s)), index=s.index)\n",
+    "\t\n",
+    "\treturn (s - mu) / std\n",
+    "\n",
+    "\n",
+    "df_adoption = pd.read_csv(NFHS_DATA_PATH)[[STATE_COL, DISTRICT_COL, AFFLUENCE_COL, INSURANCE_COL]]\n",
+    "\n",
+    "affluence_norm = z_norm(df_adoption[AFFLUENCE_COL])\n",
+    "insurance_norm = z_norm(df_adoption[INSURANCE_COL])\n",
+    "\n",
+    "df_adoption[\"Adoption Score\"] = 0.8*affluence_norm + 0.2*insurance_norm\n",
+    "\n",
+    "# build normalized matching keys\n",
+    "df_adoption[\"district_key\"] = df_adoption[DISTRICT_COL].map(norm).map(lambda x: ALIASES.get(x, x))\n",
+    "df_adoption[\"state_key\"]    = df_adoption[STATE_COL].map(norm)\n",
+    "\n",
+    "# build a lookup from (district_key, state_key) -> score\n",
+    "insurance_lookup = { (r[\"district_key\"], r[\"state_key\"]): r[INSURANCE_COL] for _, r in df_adoption.dropna(subset=[INSURANCE_COL]).iterrows() }\n",
+    "adoption_lookup  = { (r[\"district_key\"], r[\"state_key\"]): r[\"Adoption Score\"] for _, r in df_adoption.dropna(subset=[\"Adoption Score\"]).iterrows() }"
    ]
   },
   {
@@ -124,12 +175,12 @@
    "id": "6d3c3ed8",
    "metadata": {},
    "source": [
-    "Match subphenotype-based priority and genetic risk scores from CSV, and add to GeoJSON features:"
+    "Match subphenotype-based priority, genetic risk, and adoption scores from CSV, and add to GeoJSON features:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "id": "aafdd555",
    "metadata": {},
    "outputs": [],
@@ -146,12 +197,15 @@
     "    d = norm(props.get(DISTRICT_GJ, \"\"))\n",
     "    s = norm(props.get(STATE_GJ, \"\"))\n",
     "\n",
-    "    # match score and risk\n",
-    "    score = subphenotype_lookup.get((d, s))\n",
-    "    risk  = gneetic_lookup.get(s)\n",
-    "    \n",
-    "    props[\"glp1_score\"]   = float(score) if score else None\n",
-    "    props[\"genetic_risk\"] = float(risk) if risk else None\n",
+    "    subphenotype = subphenotype_lookup.get((d, s))\n",
+    "    genetic      = genetic_lookup.get(s)\n",
+    "    adoption     = adoption_lookup.get((d, s))\n",
+    "    insurance    = insurance_lookup.get((d, s))\n",
+    "\n",
+    "    props[\"glp1_score\"]      = float(subphenotype) if subphenotype else None\n",
+    "    props[\"genetic_risk\"]    = float(genetic) if genetic else None\n",
+    "    props[\"adoption_score\"]  = float(adoption) if adoption else None\n",
+    "    props[\"insurance_score\"] = float(insurance) if insurance else None\n",
     "    \n",
     "    feat[\"properties\"] = props"
    ]
@@ -166,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "id": "660811ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.LayerControl at 0x7ff8660202b0>"
+       "<folium.map.LayerControl at 0x7f66836a8e20>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,84 +241,56 @@
     "from branca.colormap import linear\n",
     "import numpy as np\n",
     "\n",
-    "values     = df_subphenotype[PRIORITY_SCORE_COL].dropna()\n",
-    "VMIN, VMAX = float(values.min()), float(values.max())\n",
-    "\n",
-    "risk_values     = df_genetic[GENETIC_RISK_COL].dropna()\n",
-    "RISK_MIN, RISK_MAX = float(risk_values.min()), float(risk_values.max())\n",
-    "\n",
-    "# color map palette for GLP1 priority scoring\n",
-    "priority_cmap         = linear.YlOrRd_09.scale(VMIN, VMAX)\n",
-    "priority_cmap.caption = \"GLP1-Focused Priority Score\"\n",
-    "\n",
-    "# color map palette for genetic risk scoring\n",
-    "risk_cmap         = linear.YlOrRd_09.scale(RISK_MIN, RISK_MAX)\n",
-    "risk_cmap.caption = \"Genetic Risk Score\"\n",
+    "DEFAULT_STYLE = {\"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\"}\n",
     "\n",
     "\n",
-    "def style_priority(feature):\n",
-    "    val = feature[\"properties\"].get(\"glp1_score\")\n",
+    "def minmax_from_geo(geo, key):\n",
+    "    vals = [\n",
+    "        float(f[\"properties\"].get(key))\n",
+    "        for f in geo[\"features\"]\n",
+    "        if f[\"properties\"].get(key) is not None\n",
+    "        and not (isinstance(f[\"properties\"].get(key), float) and np.isnan(f[\"properties\"].get(key)))\n",
+    "    ]\n",
     "    \n",
-    "    if val is None or (isinstance(val, float) and np.isnan(val)):\n",
-    "        return { \"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\" }\n",
-    "    \n",
-    "    return {\n",
-    "        \"fillOpacity\": 0.6,\n",
-    "        \"weight\":      0.25,\n",
-    "        \"fillColor\":   priority_cmap(float(val)),\n",
-    "        \"color\":       \"#333333\",\n",
-    "    }\n",
+    "    return (min(vals), max(vals)) if vals else (0.0, 1.0)\n",
     "\n",
     "\n",
-    "def style_risk(feature):\n",
-    "    val = feature[\"properties\"].get(\"genetic_risk\")\n",
-    "    \n",
-    "    if val is None or (isinstance(val, float) and np.isnan(val)):\n",
-    "        return { \"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\" }\n",
-    "    \n",
-    "    return {\n",
-    "        \"fillOpacity\": 0.35,\n",
-    "        \"weight\":      0.45,\n",
-    "        \"fillColor\":   risk_cmap(float(val)),\n",
-    "        \"color\":       \"#333333\",\n",
-    "    }\n",
+    "def feature_style(feature, *, cmap, fill_opacity=0.5, weight=0.3, border=\"#333\"):\n",
+    "    val = feature[\"properties\"].get(\"__value__\")\n",
+    "\n",
+    "    if val is None or (isinstance(val, float) and np.isnan(val)): return DEFAULT_STYLE\n",
+    "    return {\"fillOpacity\": fill_opacity, \"weight\": weight, \"fillColor\": cmap(float(val)), \"color\": border}\n",
     "\n",
     "\n",
-    "# build map\n",
+    "layers = [\n",
+    "    (\"GLP1 Priority by District\",          \"glp1_score\",     \"GLP1 Score\"),\n",
+    "    (\"Genetic Risk by State\",              \"genetic_risk\",   \"Genetic Risk\"),\n",
+    "    (\"Adoption Priority\",                  \"adoption_score\", \"Adoption Score\"),\n",
+    "    (\"Household with Insurance Coverage\",  \"insurance_score\", \"Insurance Score\"),\n",
+    "]\n",
+    "\n",
     "m = folium.Map(location=[22.9734, 78.6569], zoom_start=5, tiles=\"cartodbpositron\")\n",
     "\n",
-    "folium.GeoJson(\n",
-    "    data          =geo,\n",
-    "    name          =\"GLP1 Priority by District\",\n",
-    "    style_function=style_priority,\n",
-    "    \n",
-    "    tooltip=GeoJsonTooltip(\n",
-    "        fields =[DISTRICT_GJ, STATE_GJ, \"glp1_score\"],\n",
-    "        aliases=[\"District\", \"State/UT\", \"GLP1 Score\"],\n",
-    "        sticky =True,\n",
-    "        labels =True,\n",
-    "    ),\n",
-    ").add_to(m)\n",
+    "for name, key, alias in layers:\n",
+    "    vmin, vmax = minmax_from_geo(geo, key)\n",
+    "    cmap = linear.YlOrRd_09.scale(vmin, vmax); cmap.caption = alias\n",
     "\n",
-    "folium.GeoJson(\n",
-    "    data          =geo,\n",
-    "    name          =\"Genetic Risk by State\",\n",
-    "    style_function=style_risk,\n",
-    "    \n",
-    "    tooltip=GeoJsonTooltip(\n",
-    "        fields =[DISTRICT_GJ, STATE_GJ, \"genetic_risk\"],\n",
-    "        aliases=[\"District\", \"State/UT\", \"Genetic Risk\"],\n",
-    "        sticky =True,\n",
-    "        labels =True,\n",
-    "    ),\n",
-    ").add_to(m)\n",
+    "    gcopy = {\"type\": geo[\"type\"], \"features\": []}\n",
     "\n",
-    "# add the legends\n",
-    "priority_cmap.add_to(m)\n",
-    "risk_cmap.add_to(m)\n",
+    "    for f in geo[\"features\"]:\n",
+    "        pf = {**f[\"properties\"], \"__value__\": f[\"properties\"].get(key)}\n",
+    "        gcopy[\"features\"].append({**f, \"properties\": pf})\n",
     "\n",
-    "folium.LayerControl().add_to(m)\n",
-    "\n"
+    "    folium.GeoJson(\n",
+    "        data=gcopy,\n",
+    "        name=name,\n",
+    "        style_function=lambda feat, cm=cmap: feature_style(feat, cmap=cm, fill_opacity=0.5, weight=0.3),\n",
+    "        tooltip=GeoJsonTooltip(fields=[DISTRICT_GJ, STATE_GJ, key], aliases=[\"District\", \"State/UT\", alias], sticky=True, labels=True),\n",
+    "    ).add_to(m)\n",
+    "\n",
+    "    cmap.add_to(m)\n",
+    "\n",
+    "folium.LayerControl().add_to(m)"
    ]
   },
   {
@@ -277,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "id": "be933400",
    "metadata": {},
    "outputs": [
