chore: clean up report

--- a/visualization/heatmap.ipynb
+++ b/visualization/heatmap.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "2b2f7755",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "id": "2cfb6d80",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "454da5b8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "7f4dda7a",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "ffd7fd74",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
     "affluence_norm = z_norm(df_adoption[AFFLUENCE_COL])\n",
     "insurance_norm = z_norm(df_adoption[INSURANCE_COL])\n",
     "\n",
-    "df_adoption[\"Adoption Score\"] = 0.8*affluence_norm + 0.2*insurance_norm\n",
+    "df_adoption[\"Adoption Score\"] = 0.7*affluence_norm + 0.3*insurance_norm\n",
     "\n",
     "# build normalized matching keys\n",
     "df_adoption[\"district_key\"] = df_adoption[DISTRICT_COL].map(norm).map(lambda x: ALIASES.get(x, x))\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "aafdd555",
    "metadata": {},
    "outputs": [],
@@ -220,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "id": "660811ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.LayerControl at 0x7f66836a8e20>"
+       "<folium.map.LayerControl at 0x7fee12a46900>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
     "from branca.colormap import linear\n",
     "import numpy as np\n",
     "\n",
-    "DEFAULT_STYLE = {\"fillOpacity\": 0.1, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\"}\n",
+    "DEFAULT_STYLE = {\"fillOpacity\": 0, \"weight\": 0.2, \"fillColor\": \"#cccccc\", \"color\": \"#555555\"}\n",
     "\n",
     "\n",
     "def minmax_from_geo(geo, key):\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "be933400",
    "metadata": {},
    "outputs": [
